# thunderstorm-nowcast-microstep

./: CONFIG.yaml  Dockerfile  JenkinsConstants.groovy  Jenkinsfile  LICENSE  README.md  ai4-metadata.yml  metadata.json  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: main.yml
.sqa/: config.yml
ai4eosc_thunder_nowcast_ml/: config.py  config_layout.py
ai4eosc_thunder_nowcast_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt  top_level.txt
ai4eosc_thunder_nowcast_ml/configs/config_inout_settings/: CONFIG_INOUT_lastdataFalse_lastmodelFalse.yaml  CONFIG_INOUT_lastdataFalse_lastmodelTrue.yaml  CONFIG_INOUT_lastdataTrue_lastmodelFalse.yaml  CONFIG_INOUT_lastdataTrue_lastmodelTrue.yaml
ai4eosc_thunder_nowcast_ml/dataset/: make_dataset.py
ai4eosc_thunder_nowcast_ml/dataset/config/: CONFIG_predict.yaml  CONFIG_test_model.yaml  CONFIG_train_model.yaml
ai4eosc_thunder_nowcast_ml/features/: build_features.py
ai4eosc_thunder_nowcast_ml/models/: api.py  model_utils.py  statistics.py
ai4eosc_thunder_nowcast_ml/tests/: test_unit_model.py
ai4eosc_thunder_nowcast_ml/visualization/: visualize.py
data/configs/config_data_management/: CONFIG_DM_13AREAs_Zlin_Saur_10min.yaml  CONFIG_DM_13AREAs_Zlin_Saur_20min.yaml  CONFIG_DM_13AREAs_Zlin_Saur_25min.yaml  CONFIG_DM_13AREAs_Zlin_Saur_30min.yaml  CONFIG_DM_13AREAs_Zlin_Saur_35min.yaml  CONFIG_DM_13AREAs_Zlin_Saur_40min.yaml  CONFIG_DM_13AREAs_Zlin_Saur_5min.yaml  CONFIG_DM_13ORPs_Zlin_Saur_10min.yaml  CONFIG_DM_13ORPs_Zlin_Saur_20min.yaml  CONFIG_DM_13ORPs_Zlin_Saur_25min.yaml  CONFIG_DM_13ORPs_Zlin_Saur_30min.yaml  CONFIG_DM_13ORPs_Zlin_Saur_35min.yaml  CONFIG_DM_13ORPs_Zlin_Saur_40min.yaml  CONFIG_DM_13ORPs_Zlin_Saur_5min.yaml  CONFIG_DM_1x13_Zlin_Saur_10min.yaml  CONFIG_DM_1x13_Zlin_Saur_20min.yaml  (+5 more)
data/raw/: model.h5
docs/: Makefile  conf.py  index.rst  make.bat
models/: model.h5
notebooks/: 1.0-ai4eosc_thunder_nowcast_ml_start.ipynb
(+18 files in other folders)
