# -*- coding: utf-8 -*-
[metadata]
name = ai4eosc_thunder_nowcast_ml
summary = Thunderstorm nowcast based on radar data (for agrometeorology)
description-file =
    README.md
author = MicroStep-MIS
author-email = peter.sisan@microstep-mis.com, irina.malkin.ondik@microstep-mis.com, juraj.bartok@microstep-mis.com
version = 0.0.1
license = MIT
home-page = https://github.com/MicroStep-MIS/UC-MicroStep-MIS-ai4eosc_thunder_nowcast_ml
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    UC-MicroStep-MIS-ai4eosc_thunder_nowcast_ml

[entry_points]
deepaas.v2.model =
    ai4eosc_thunder_nowcast_mlhunder_nowcast_ml = ai4eosc_thunder_nowcast_ml.models.api
