# -*- coding: utf-8 -*-
[metadata]
name = ai4eosc_thunder_nowcast_ml
summary = Thunderstorm nowcast based on radar data (for agrometeorology)
description_file =
    README.md
author = MicroStep-MIS
author_email = peter.sisan@microstep-mis.com, irina.malkin.ondik@microstep-mis.com, juraj.bartok@microstep-mis.com
version = 0.0.1
license = MIT
home_page = https://github.com/MicroStep-MIS/thunderstorm-nowcast-microstep
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8

[files]
packages =
    ai4eosc_thunder_nowcast_ml

[entry_points]
deepaas.v2.model =
    ai4eosc_thunder_nowcast_ml = ai4eosc_thunder_nowcast_ml.models.api
